# christephanie

./: .gitignore  CLAUDE.md  CLAUDE.md.save  CLAUDE_PROMPT.txt  README.md  README_AWS_SETUP.md  deployment-instructions.md  package.json  stripe-api-contract.md
.claude/: settings.local.json
.github/workflows/: deploy-backend.yml  deploy-frontend-v2.yml  deploy-frontend.yml
architectural-diagrams/: README.md  aws-infrastructure.md  backend-architecture.md  data-flow.md  deployment-architecture.md  design-decisions.md  faang-resume-highlights.md  frontend-architecture.md  index.md  password-protected-viewer.html  system-overview.md
backend/: .env  output.html  output.json
backend/OLD/: pyproject.toml
backend/OLD/app/api/v1/: api.py
backend/OLD/app/api/v1/models/: tle.py
backend/OLD/app/api/v1/tle/: endpoints.py
backend/OLD/app/cache/: downloaded_tles.txt
backend/OLD/app/routers/: guests.py
backend/OLD/app/services/: collision.py  pertubation.py  tle.py
backend/OLD/app/services/space_track/: auth.py
frontend/: .env  .gitignore  .jshint  CLAUDE.md  README.md  RSVP-State-Management-Implementation.md  RSVP.md  WEDDING_FACTS.md  bachelor-party-page.md  details-page.md  eslint.config.js  index.html  jest.config.js  jest.config.mjs  manifest.json  package.json  playwright.config.ts  registry-page.md  setupTests.js  swagger.json  travel-page-mobile-optimization.md  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend_old/: .eslintrc.json  jest.config.js  jest.setup.js  package.json  tsconfig.json
infra/: .gitignore  README.md  package.json
(+1263 files in other folders)
