[tool.poetry]
name = "christephanie-api"
version = "0.1.0"
description = "\"Serverless Wedding Rest API for The Christephanie\""
authors = ["Topher Sikorra <topher.sikorra@gmail.com>, Stephanie Stubler <steph.stubler@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.2"
requests = "^2.32.3"
boto3 = "^1.35.70"
awscli = "^1.36.11"
docker = "^7.1.0"
gunicorn = "^23.0.0"
httpx = "^0.27.2"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
python-dotenv = "^1.0.1"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
